(DOCK): Pushed `SBT_OPTS`